--- a/Inventario/Inventario/Inventario.csproj
+++ b/Inventario/Inventario/Inventario.csproj
@@ -77,6 +77,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Rotativa, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rotativa.1.6.4\lib\net40\Rotativa.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -387,6 +391,7 @@
     <Content Include="images\imagen2.jpg" />
     <Content Include="images\imagen3.jpg" />
     <Content Include="images\inventario.jpg" />
+    <Content Include="images\inventarioasda.png" />
     <Content Include="images\loading.gif" />
     <Content Include="images\logo.svg" />
     <Content Include="images\paperbottom.jpg" />
@@ -531,6 +536,8 @@
     <Content Include="Views\Tabla_Intermedia_Proveen\Reporte.cshtml" />
     <Content Include="Views\Tabla_Proveedores\Reporte.cshtml" />
     <Content Include="Views\Tabla_Clientes\Reporte.cshtml" />
+    <Content Include="Views\Tabla_Clientes\Reporte2.cshtml" />
+    <Content Include="Views\Tabla_Proveedores\Reporte2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
